--- a/src/pages/Quiz/style.scss
+++ b/src/pages/Quiz/style.scss
@@ -32,11 +32,14 @@
                 height: 40px;
                 width: 40px;
                 text-align: center;
-                filter: invert(1) opacity(0.6);
+                border-radius: 50%;
+                border: 2px solid #31304D;
+
+                // filter: invert(1) opacity(0.6);
             }
 
             #countdown-number {
-                color: white;
+                color: #31304D;
                 display: inline-block;
                 line-height: 40px;
             }
