--- a/src/components/help/style.scss
+++ b/src/components/help/style.scss
@@ -27,7 +27,13 @@
                     color: white !important;
                 }
             }
+
+            &:disabled {
+                cursor: not-allowed;
+                opacity: 0.5;
+            }
         }
+
     }
 
     .info {
