--- a/src/pages/Quiz/style.scss
+++ b/src/pages/Quiz/style.scss
@@ -112,11 +112,25 @@
                 // background-size: 200% 100%;
                 // background-position: right bottom;
                 // transition: all .5s ease-out;
+                position: relative;
 
                 &:hover {
                     background-color: #DDD9D6;
                     // background-position: left bottom;
                 }
+
+                .answerOverlay {
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    width: 100%;
+                    height: 100%;
+                    border-radius: 10px;
+                    background-color: green;
+                    transition: 200ms linear;
+                    opacity: 0;
+                }
+
             }
 
             .next {
